--- a/index.html
+++ b/index.html
@@ -72,19 +72,13 @@
         <div class="subheading mb-5">Skokie, IL 60076 · (224) 392-2996 ·
           <a href="mailto:name@email.com">gershon.fiedler@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">I am a full stack application developer with 10+ years of experience coding with multiple languages & frameworks. I focus on writing clean Object Oriented and DRY code.</p>
         <div class="social-icons">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/gershon-fiedler-15528717/" target="_blank">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
+          <a href="https://github.com/gffilm" target="_blank">
             <i class="fab fa-github"></i>
-          </a>
-          <a href="#">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="#">
-            <i class="fab fa-facebook-f"></i>
           </a>
         </div>
       </div>
@@ -100,43 +94,43 @@
           <div class="resume-content">
             <h3 class="mb-0">Lead Application Developer</h3>
             <div class="subheading mb-3">Learning Pool</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            <p>Capitalizing on low hanging fruit, I enchanced performance in our applications that proved to be critical as we scaled our operations.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">April 2011 - Present</span>
+            <span class="text-primary">December 2021 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Lead Application Developer</h3>
+            <div class="subheading mb-3">True Office</div>
+            <p>Engineered a Learning Management System from the ground up, now with fortune 500 clients and with millions of users.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">April 2015 - December 2021</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+            <div class="subheading mb-3">Corpedia</div>
+            <p>Developed tools that reduced costs and manual entry on multiple levels of the application.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
+            <span class="text-primary">May 2011 - April 2015</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+            <h3 class="mb-0">Motion Graphic Designer</h3>
+            <div class="subheading mb-3">Comcast</div>
+            <p>Created national branded spots and enhanced them with customized scripts to create cutting edge motion graphics.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
+            <span class="text-primary">August 2005 - May 2010</span>
           </div>
         </div>
 
@@ -152,52 +146,22 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <h3 class="mb-0">Columbia College Chicago</h3>
+            <div class="subheading mb-3">Bachelor of Arts</div>
+            <div>Film & Television</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">August 2002 - May 2004</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
+            <h3 class="mb-0">University of Illinois at Chicago</h3>
+            <div class="subheading mb-3">Art & Design Program</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
-          </div>
-        </div>
-
-      </div>
-    </section>
-
-    <hr class="m-0">
-
-
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="portfolio">
-      <div class="w-100">
-        <h2 class="mb-5">Portfolio</h2>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">My Awesome Blockchain Project #1</h3>
-            <div class="subheading mb-3">Project Tagline</div>
-            <img class="img-fluid mx-auto mb-2" src="img/portfolio.jpg" alt="">
-            <div>Project Description: This is the most amazing blockchain project ever. Check it out with this <a href="">link</a>.</div>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">My Awesome Blockchain Project #2</h3>
-            <div class="subheading mb-3">Project Tagline</div>
-            <img class="img-fluid mx-auto mb-2" src="img/portfolio.jpg" alt="">
-            <div>Project Description: This is the most amazing blockchain project ever. Check it out with this <a href="">link</a>.</div>
+            <span class="text-primary">August 2000 - May 2002</span>
           </div>
         </div>
 
@@ -225,7 +189,7 @@
             <i class="fab fa-angular"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-react"></i>
+            <i class="fab fa-php"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab fa-node-js"></i>
@@ -235,15 +199,6 @@
           </li>
           <li class="list-inline-item">
             <i class="fab fa-less"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-gulp"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-grunt"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab fa-npm"></i>
@@ -270,11 +225,39 @@
 
     <hr class="m-0">
 
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="portfolio">
+      <div class="w-100">
+        <h2 class="mb-5">Portfolio</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Learn IO</h3>
+            <div class="subheading mb-3">A streamlined LMS to fit your company's needs</div>
+            <img class="img-fluid mx-auto mb-2" src="img/learnio.jpg" alt="">
+            <div>Project Description: One of the most easy-to-use yet powerful learning management systems out there. Check it out with this <a href="">learn.trueoffice.com</a>.</div>
+          </div>
+        </div>
+
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Pactools</h3>
+            <div class="subheading mb-3">A toolset for internal resources</div>
+            <img class="img-fluid mx-auto mb-2" src="img/pactools.jpg" alt="">
+            <div>Project Description: he behind the scenes set of tools that provides the engine for Learn IO's functionality</a>.</div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <hr class="m-0">
+
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+        <p>Apart from being a web developer and father of four, I enjoy most of my time being outdoors. In the winter, I am an avid skier. During the warmer months I enjoy mountain biking, kayaking and camping.</p>
+        <p class="mb-0">I spend a large amount of my free time exploring the latest technology advancements in the web development world.</p>
       </div>
     </section>
 
@@ -286,30 +269,14 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Analytics Certified Developer</li>
+            2021 - Brandon Hill SILVER: Excellence in Technology Award</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
+            2020 - Brandon Hill GOLD: Excellence in Technology Award</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
+            2005 - Emmy Award GOLD for excellence in short program</li>
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            2<sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - James Buchanan High School - Hackathon 2006</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            3<sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005</li>
         </ul>
       </div>
     </section>
