--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" style="display:none">
           <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
         </li>
         <li class="nav-item">
@@ -72,8 +72,8 @@
         <div class="subheading mb-5">Skokie, IL 60076 · (224) 392-2996 ·
           <a href="mailto:name@email.com">gershon.fiedler@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am a full stack application developer with 10+ years of experience coding with multiple languages & frameworks. I focus on writing clean Object Oriented and DRY code.</p>
-        <div class="social-icons">
+        <p class="lead mb-5">I am a full stack application developer with 10+ years of experience coding with multiple languages & frameworks. As an experienced software developer, I have a passion for writing clean and extendable code that solves complex problems. I take pride in my ability to build high-quality applications that deliver value to users. My attention to detail and commitment to best practices ensures that my code is easy to read, maintain, and scale.</p>
+        <div class="social-icons" style="display:none">
           <a href="https://www.linkedin.com/in/gershon-fiedler-15528717/" target="_blank">
             <i class="fab fa-linkedin-in"></i>
           </a>
@@ -94,7 +94,17 @@
           <div class="resume-content">
             <h3 class="mb-0">Lead Application Developer</h3>
             <div class="subheading mb-3">Learning Pool</div>
-            <p>Capitalizing on low hanging fruit, I enchanced performance in our applications that proved to be critical as we scaled our operations.</p>
+            <p>
+             <ul>
+              <li>Designed and implemented innovative solutions that enhanced business operations and yielded time and cost savings for the company</li>
+              <li>Developed an application to automate our localization process, reducing expenses and time significantly.</li>
+              <li>Created applications to train managers on how to deal with difficult situations with employees to reduce liabiltiy and maintain positive morale and working relationships internally and externally.</li>
+              <li>Demonstrated proficiency in delivering impactful solutions that drive business success.</li>
+              <li>Converted a manual process SSO configuration to a database driven application that saves hours of manual work and provided a maintainable, testable and reliable service</li>
+              <li>Developed automated processes to reduce manual risk intensive labor as it related to data manipulation and processing</li>
+              <li>Optomized injesting of client data for speed and validitiy</li>
+            </ul>
+          </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">December 2021 - Present</span>
@@ -105,7 +115,18 @@
           <div class="resume-content">
             <h3 class="mb-0">Lead Application Developer</h3>
             <div class="subheading mb-3">True Office</div>
-            <p>Engineered a Learning Management System from the ground up, now with fortune 500 clients and with millions of users.</p>
+            <p>
+              <ul>
+                <li>Engineered a Learning Management System from the ground up, now with fortune 500 clients and with millions of users.</li>
+                <li>Created automated scheduled event handler and processors</li>
+                <li>Created Role and permission based systems</li>
+                <li>Auditing controls and logs</li>
+                <li>E-mail processing, push notifications using localizations and macro encoded values</li>
+                <li>Secure custom report generator in a role based, easy to operate, filtering system</li>
+                <li>Provided support for international clients across the globe</li>
+                <li>Debugging complex application, database and configuration issues</li>
+              </ul>
+            </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">April 2015 - December 2021</span>
@@ -116,7 +137,15 @@
           <div class="resume-content">
             <h3 class="mb-0">Web Developer</h3>
             <div class="subheading mb-3">Corpedia</div>
-            <p>Developed tools that reduced costs and manual entry on multiple levels of the application.</p>
+            <p>
+              <ul>
+                <li>Created custom online course player for HTML5</li>
+                <li>Created tools to easily convert word and excel documents into an online interactive course</li>
+                <li>Developed tools that reduced costs on multiple levels of the company's applications and workflows.</li>
+                <li>Created applications that reduced need for repetitive and manual inputs</li>
+                <li>Converted static designs into HTML web pages</li>
+              </ul>
+            </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">May 2011 - April 2015</span>
@@ -125,9 +154,14 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Motion Graphic Designer</h3>
+            <h3 class="mb-0">Web & Graphic Designer</h3>
             <div class="subheading mb-3">Comcast</div>
-            <p>Created national branded spots and enhanced them with customized scripts to create cutting edge motion graphics.</p>
+            <p>
+              <ul>
+                <li>Created national branded TV spots and enhanced them with customized scripts to create cutting edge motion graphics.</li>
+                <li>Designed corporate website</li>
+              </ul>
+            </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2005 - May 2010</span>
@@ -174,39 +208,41 @@
       <div class="w-100">
         <h2 class="mb-5">Skills</h2>
 
-        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+        <div class="subheading mb-3">Programming Languages</div>
         <ul class="list-inline dev-icons">
-          <li class="list-inline-item">
-            <i class="fab fa-html5"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-css3-alt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-php"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-sass"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-less"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
-          </li>
+          <li class="list-inline-item"><i class="fab fa-angular"></i> Angular</li>
+          <li class="list-inline-item"><i class="fab fa-react"></i> React</li>
+          <li class="list-inline-item"><i class="fab fa-node-js"></i> Node</li>
+          <li class="list-inline-item"><i class="fab fa-php"></i> PHP</li>
+          <li class="list-inline-item"><i class="fab fa-js"></i> Typescript</li>
+          <li class="list-inline-item"><i class="fab fa-python"></i> Python</li>
+          <li class="list-inline-item"><i class="fas fa-chart-line"></i> Analytics</li>
+          <li class="list-inline-item"><i class="fas fa-database"></i> MYSQL, NOSQL</li>
+          <li class="list-inline-item"><i class="fab fa-html5"></i> HTML5 / CSS3</li>
+          <li class="list-inline-item"><i class="fas fa-database"></i> MSSQL, MYSQL, PostgreSQL</li>
+        </ul>
+
+        <div class="subheading mb-3">Methods & Services</div>
+        <ul class="list-inline dev-icons">
+          <li class="list-inline-item"><i class="fas fa-code"></i> DRY Extendable code</li>
+
+          <li class="list-inline-item"><i class="fas fa-vial"></i>Test Driven Development</li>
+          <li class="list-inline-item"><i class="fas fa-chart-line"></i> Analytics</li>
+          <li class="list-inline-item"><i class="fas fa-plug"></i> API Integration</li>
+          <li class="list-inline-item"><i class="fas fa-universal-access"></i> Accessibility, Responsive Design</li>
+          <li class="list-inline-item"><i class="fas fa-eye"></i> Code Review</li>
+          <li class="list-inline-item"><i class="fab fa-github"></i> GIT, Mercurial HG, Subversion</li>
+          <li class="list-inline-item"><i class="fas fa-tasks"></i> Insight, Redmine, Onetime, ServiceNow</li>
+          <li class="list-inline-item"><i class="fas fa-user-friends"></i> Agile, Scrum</li>
+          <li class="list-inline-item"><i class="fab fa-git"></i> GIT & HG</li>
+          <li class="list-inline-item"><i class="fas fa-table"></i> Relational DB, Normalization</li>
         </ul>
 
         <div class="subheading mb-3">Workflow</div>
         <ul class="fa-ul mb-0">
+           <li>
+            <i class="fa-li fa fa-check"></i>
+            Agile Development &amp; Scrum</li>
           <li>
             <i class="fa-li fa fa-check"></i>
             Mobile-First, Responsive Design</li>
@@ -216,16 +252,13 @@
           <li>
             <i class="fa-li fa fa-check"></i>
             Cross Functional Teams</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
         </ul>
       </div>
     </section>
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="portfolio">
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="portfolio" style="display: none !important">
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h2>
 
@@ -234,7 +267,7 @@
             <h3 class="mb-0">Learn IO</h3>
             <div class="subheading mb-3">A streamlined LMS to fit your company's needs</div>
             <img class="img-fluid mx-auto mb-2" src="img/learnio.jpg" alt="">
-            <div>Project Description: One of the most easy-to-use yet powerful learning management systems out there. Check it out with this <a href="">learn.trueoffice.com</a>.</div>
+            <div>Project Description: One of the most easy-to-use yet powerful learning management systems out there. Check it out with this <a href="learn.trueoffice.com">learn.trueoffice.com</a>.</div>
           </div>
         </div>
 
