--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.png" alt="">
       </span>
+      <p><a target="_blank" class="btn btn-primary" href="assets/gershon-fiedler-resume.pdf">PDF Version</a></p>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -98,11 +99,11 @@
              <ul>
               <li>Designed and implemented innovative solutions that enhanced business operations and yielded time and cost savings for the company</li>
               <li>Developed an application to automate our localization process, reducing expenses and time significantly.</li>
-              <li>Created applications to train managers on how to deal with difficult situations with employees to reduce liabiltiy and maintain positive morale and working relationships internally and externally.</li>
+              <li>Created applications to train managers on how to deal with difficult situations with employees to reduce liability and maintain positive morale and working relationships internally and externally.</li>
               <li>Demonstrated proficiency in delivering impactful solutions that drive business success.</li>
               <li>Converted a manual process SSO configuration to a database driven application that saves hours of manual work and provided a maintainable, testable and reliable service</li>
               <li>Developed automated processes to reduce manual risk intensive labor as it related to data manipulation and processing</li>
-              <li>Optomized injesting of client data for speed and validitiy</li>
+              <li>Optimized ingesting of client data for speed and validity</li>
             </ul>
           </p>
           </div>
@@ -121,7 +122,7 @@
                 <li>Created automated scheduled event handler and processors</li>
                 <li>Created Role and permission based systems</li>
                 <li>Auditing controls and logs</li>
-                <li>E-mail processing, push notifications using localizations and macro encoded values</li>
+                <li>Email processing, push notifications using localizations and macro encoded values</li>
                 <li>Secure custom report generator in a role based, easy to operate, filtering system</li>
                 <li>Provided support for international clients across the globe</li>
                 <li>Debugging complex application, database and configuration issues</li>
