--- a/index.html
+++ b/index.html
@@ -97,13 +97,9 @@
             <div class="subheading mb-3">Learning Pool</div>
             <p>
              <ul>
-              <li>Designed and implemented innovative solutions that enhanced business operations and yielded time and cost savings for the company</li>
-              <li>Developed an application to automate our localization process, reducing expenses and time significantly.</li>
-              <li>Created applications to train managers on how to deal with difficult situations with employees to reduce liability and maintain positive morale and working relationships internally and externally.</li>
-              <li>Demonstrated proficiency in delivering impactful solutions that drive business success.</li>
-              <li>Converted a manual process SSO configuration to a database driven application that saves hours of manual work and provided a maintainable, testable and reliable service</li>
-              <li>Developed automated processes to reduce manual risk intensive labor as it related to data manipulation and processing</li>
-              <li>Optimized ingesting of client data for speed and validity</li>
+              <li>Developed an application to automate localization by combining results from multiple AI translation vendors including DeepL, Google Translate, Amazon, Systran and Microsoft, leveraging the strengths of each while reducing time and costs by two orders of magnitude.</li>
+              <li>Created an application to train managers on how to deal with difficult situations in the workplace by engaging them in simulated exercises. Utilizing ChatGPT along with WhisperAI and elevenLabs for speech-to-text and text-to-speech, it provides a seamless environment for managers to have a conversation with AI enabled employees with minimal latency and provides feedback and scores for how they can better handle their conversations.</li>
+              <li>Demonstrated proficiency in converting manual day-to-day processes into automated solutions: SSO configurations into web application forms and processing; Conversion of manual queries and inserts into application level processes; testable and verifiable automated processes.  </li>
             </ul>
           </p>
           </div>
@@ -116,18 +112,17 @@
           <div class="resume-content">
             <h3 class="mb-0">Lead Application Developer</h3>
             <div class="subheading mb-3">True Office</div>
-            <p>
+              <p>Engineered a Learning Management System from the ground up, now with fortune 500 clients and with millions of users. The system includes the following toggable and customizable features:</p>
               <ul>
-                <li>Engineered a Learning Management System from the ground up, now with fortune 500 clients and with millions of users.</li>
-                <li>Created automated scheduled event handler and processors</li>
-                <li>Created Role and permission based systems</li>
+                <li>Localization support for multiple languages with ability to import localization data</li>
+                <li>Unlimited Role and permissions</li>
+                <li>Multiple methods of ingesting client data from manual forms, excel spreedsheets, to automated sftp batches</li>
+                <li>Automated scheduled event handler and processors for enrollments and emails</li>
                 <li>Auditing controls and logs</li>
-                <li>Email processing, push notifications using localizations and macro encoded values</li>
+                <li>Localized Email processing, push notifications and macro encoded values</li>
                 <li>Secure custom report generator in a role based, easy to operate, filtering system</li>
-                <li>Provided support for international clients across the globe</li>
-                <li>Debugging complex application, database and configuration issues</li>
               </ul>
-            </p>
+            <p>Provided level III support for local and international clients</p> 
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">April 2015 - December 2021</span>
