--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <span class="text-primary">Fiedler</span>
         </h1>
         <div class="subheading mb-5">Skokie, IL 60076 · (224) 392-2996 ·
-          <a href="mailto:name@email.com">gershon.fiedler@gmail.com</a>
+          <a href="mailto:gershon.fiedler@gmail.com">gershon.fiedler@gmail.com</a>
         </div>
         <p class="lead mb-5">I am a full stack application developer with 10+ years of experience coding with multiple languages & frameworks. As an experienced software developer, I have a passion for writing clean and extendable code that solves complex problems. I take pride in my ability to build high-quality applications that deliver value to users. My attention to detail and commitment to best practices ensures that my code is easy to read, maintain, and scale.</p>
         <div class="social-icons" style="display:none">
