--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
           <div class="resume-content">
             <h3 class="mb-0">Lead Application Developer</h3>
             <div class="subheading mb-3">True Office</div>
-              <p>Engineered a Learning Management System from the ground up, now with fortune 500 clients and with millions of users. The system includes the following toggable and customizable features:</p>
+              <p>Engineered a Learning Management System from the ground up, now with fortune 500 clients and with millions of users. The system includes the following togglable and customizable features:</p>
               <ul>
                 <li>Localization support for multiple languages with ability to import localization data</li>
                 <li>Unlimited Role and permissions</li>
-                <li>Multiple methods of ingesting client data from manual forms, excel spreedsheets, to automated sftp batches</li>
+                <li>Multiple methods of ingesting client data from manual forms, excel spreadsheets, to automated SFTP batches</li>
                 <li>Automated scheduled event handler and processors for enrollments and emails</li>
                 <li>Auditing controls and logs</li>
                 <li>Localized Email processing, push notifications and macro encoded values</li>
