--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0;url=resume/index.html">
+    <meta http-equiv="refresh" content="0;url=/resume/index.html">
 </head>
 <body>
-    <p>If you are not redirected, <a href="resume/index.html">click here</a>.</p>
+    <p>If you are not redirected, <a href="/resume/index.html">click here</a>.</p>
 </body>
 </html>
