--- a/reader/public/index.html
+++ b/reader/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Converse</title>
+    <title>Reader</title>
     <meta name="theme-color" content="#ffffff">
     <link
       rel="stylesheet"
