--- a/resume/web/index.html
+++ b/resume/web/index.html
@@ -7,10 +7,9 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Gershon Fiedler: Resume</title>
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" />
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" />
     <link href="styles/app.css" rel="stylesheet">
   </head>
   <body>
