--- a/tables/web/index.html
+++ b/tables/web/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>App Template</title>
+    <title>Seating Chart For Sammy's Bat Mitzvah</title>
   </head>
   <body>
     <div id="root"></div>
